--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <div class="front flap"></div>
                 <div class="front pocket"></div>
                 <div class="letter">
-                    <p class="words line1">Hola mi amor,</p>
-                    <p class="words line2">Solo quiero darte las gracias</p>
-                    <p class="words line3">Por ser mi novia, eres todo lo</p>
-                    <p class="words line4">Que algun dia soñé mi amor, te amo.</p>
+                    <p class="words line1">Hola mi amor, Solo quiero darte</p>
+                    <p class="words line2">las gracias por ser mi novia</p>
+                    <p class="words line3">Eres todo lo que algun dia soñé</p>
+                    <p class="words line4">Te amo.</p>
                 </div>
                 <div class="hearts">
                     <div class="heart a1"></div>
