--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <div class="front pocket"></div>
                 <div class="letter">
                     <p class="words line1">Feliz San Valentin</p>
-                    <p class="words line2">Te amo, mi princesita</p>
-                    <p class="words line3">Mi cuchurrumina bonita</p>
+                    <p class="words line2">Te amo, mi princesita, mi cuchurrumina bonita</p>
+                    <p class="words line3"></p>
                     <p class="words line4">Love u.</p>
                 </div>
                 <div class="hearts">
